# compiler-rust

./: Cargo.toml  README.md  example_code.txt  syntax_table.json  tabela.json
src/: lexer.rs  main.rs  parser.rs  semantic.rs  util.rs
templates/: compiler_template.html  index_template.html  syntax_template.html  tab1.html  tab2.html  tab3.html  tokens_template.html
