[package]
name = "compiladores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3"
serde = { version = "1", features = ["derive"] }
tera = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1.10.2"
